<resources>
    <string name="app_name">chat</string>
    <string name="send">Send</string>
    <string name="write_your_name">Write your name</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="age">age</string>
    <string name="calculate">calculate</string>
    <string name="result">result</string>
    <string name="recalculate">recalculate</string>
    <string name="error">Error</string>
    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>
    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>
    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>
    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>
    <string name="boardgames">board games</string>
    <string name="categories">categories</string>
    <string name="games">games</string>
    <string name="dialog_add_game">Add a game</string>
    <string name="dialog_cooperative_category">Cooperative</string>
    <string name="dialog_deckbuilding_category">Deckbuilding</string>
    <string name="dialog_euro_category">Eurogames</string>
    <string name="dialog_LCG_category">Living Card Games</string>
    <string name="dialog_legacy_category">Legacy</string>
    <string name="dialog_newgame_button">New Game</string>

    <string name="v1_20">V1 (20%)</string>
    <string name="v2_35">V2 (35%)</string>
    <string name="v3_50">V3 (50%)</string>
    <string name="v4_65">V4 (65%)</string>
    <string name="v5_80">V5 (80%)</string>

    <string name="h1_20">H1 (20%)</string>
    <string name="h2_50">H2 (50%)</string>
    <string name="h3_80">H3 (80%)</string>
    <string name="choose_bar">Choose a bar</string>
    <string name="choose_color">Choose a color</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="turquoise">Turquoise</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
    <string name="black">Black</string>
    <string name="dialog_apply_color">Apply color</string>

</resources>