<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".colorPalette.ColorPalette"
    tools:ignore="ExtraText">
    <!-- LAYOUT PARA ENCABEZADO Y RECYCLERVIEW -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/bgapp_background_app"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="COLOR PALETTE"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:layout_gravity="center"
            android:textStyle="bold">
        </TextView>
    </androidx.cardview.widget.CardView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvVerticalColors"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_marginBottom="100dp"
        android:padding="40dp" />
    </LinearLayout>

    <!-- LAYOUT PARA CARDVIEWS Y BOTÓN -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        android:layout_marginTop="100dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/cvHorizontalColor1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/red20"
            android:layout_marginVertical="20dp"
            ><TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h1_20"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_gravity="start|center"
                style="bold"
            ></TextView>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cvHorizontalColor2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/green50"
            android:layout_marginVertical="20dp"
            ><TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h2_50"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_gravity="start|center"
                style="bold"
            ></TextView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvHorizontalColor3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/blue80"
            android:layout_marginVertical="20dp"
            ><TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h3_80"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_gravity="start|center"
                style="bold"
            ></TextView>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnChangeColor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_marginTop="40dp"
            android:text="CHANGE COLOR">
        </Button>
    </LinearLayout>
</FrameLayout>